fixing avatars on mobile safari

--- a/styles.css
+++ b/styles.css
@@ -396,7 +396,7 @@ a:visited:hover {
   .avatar {
     display: block;
     float: none;
-    margin: 5% auto auto 5%;
+    margin: 5% 0px 0px 5%;
     border-radius: 5%;
     width: 40%;
   }
